my/04_test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: echoer
  name: echoer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echoer
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: echoer
    spec:
      containers:
      - image: ealen/echo-server
        name: echoer
        ports:
        - containerPort: 80
        resources: {}
status: {}
