my/svc_ci.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: echoer
  name: echoer
spec:
  ports:
  - name: cluip
    port: 12345
    protocol: TCP
    targetPort: 80
  selector:
    app: echoer
  type: ClusterIP
status:
  loadBalancer: {}
