my/svc_np.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: echoer
  name: echoer2
spec:
  ports:
  - name: 30080-80
    port: 80
    nodePort: 30080
    protocol: TCP
    targetPort: 80
  selector:
    app: echoer
  type: NodePort
status:
  loadBalancer: {}
